[package]
name = "rill"
version = "0.2.0"
edition = "2018"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
repository = "https://github.com/rate-technology/rill"
homepage = "https://github.com/rate-technology/rill"
description = "Dynamic logging and tracing system"
categories = ["development-tools::debugging"]
keywords = ["logging"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.33"
async-trait = "0.1.41"
derive_more = "0.99.11"
futures = "0.3.6"
log = { version = "0.4.11", features = ["std"] }
meio = "0.23.0"
meio-connect = "0.23.0"
once_cell = "1.4.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
thiserror = "1.0.21"
tokio = { version = "0.2.22", features = ["full"] }

[features]
default = ["log-driver"]
log-driver = []
