[package]
name = "rill"
version = "0.5.1"
edition = "2018"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
repository = "https://github.com/rate-technology/rill"
homepage = "https://github.com/rate-technology/rill"
description = "Dynamic logging and tracing system"
categories = ["development-tools::debugging"]
keywords = ["logging"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.34"
async-trait = "0.1.42"
derive_more = "0.99.11"
futures = "0.3.8"
log = "0.4.11"
meio = "0.31.0"
meio-connect = "0.31.0"
once_cell = "1.5.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.60"
slab = "0.4.2"
thiserror = "1.0.22"
tokio = { version = "0.3.5", features = ["full"] }

[dev-dependencies]
ctrlc = "3.1.7"
env_logger = "0.8.2"
