[package]
name = "rate-core"
version = "0.38.0-rc.1"
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rill-server/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "The RillRate embedded HTTP server."

[dependencies]
anyhow = "1.0.43"
async-trait = "0.1.51"
derive_more = "0.99.16"
env_logger = "0.9.0"
flate2 = "1.0.20"
log = "0.4.14"
meio = "0.93.5"
meio-connect = "0.93.5"
metacrate = "0.1.2"
mime_guess = "2.0.3"
once_cell = "1.8.0"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls"] }
rill-engine = { version = "0.38.0-rc.1", path = "../rill-engine" }
rill-protocol = { version = "0.38.0-rc.1", path = "../rill-protocol" }
serde = "1.0.129"
strum = { version = "0.21.0", features = ["derive"] }
tar = "0.4.37"
thiserror = "1.0.26"
tokio = "1.10.1"
typed-slab = "0.1.4"
uuid = "0.8.2"
