[package]
name = "rill-client"
version = "0.30.0-alpha.4"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rillrate/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "Dynamic logging and tracing system"

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.50"
derive_more = "0.99.14"
futures = "0.3.15"
log = "0.4.14"
meio = "0.89.0"
meio-connect = "0.89.0"
rill-protocol = { version = "0.30.0-alpha.4", path = "../rill-protocol" }
thiserror = "1.0.25"
typed-slab = "0.1.1"
