[package]
name = "rill-client"
version = "0.31.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rill-client/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "Dynamic logging and tracing system"

[dependencies]
anyhow = "1.0.41"
async-trait = "0.1.50"
derive_more = "0.99.14"
log = "0.4.14"
meio = "0.89.4"
meio-connect = "0.89.4"
rill-protocol = { version = "0.31.0", path = "../rill-protocol" }
thiserror = "1.0.25"
tokio = "1.7.1"
