[package]
name = "rill-client"
version = "0.35.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rillrate-rs"
homepage = "https://github.com/rillrate/rillrate-rs"
documentation = "https://docs.rs/rill-client/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "Dynamic logging and tracing system"

[dependencies]
anyhow = "1.0.42"
async-trait = "0.1.50"
derive_more = "0.99.16"
log = "0.4.14"
meio = "0.92.0"
meio-connect = "0.92.0"
rill-protocol = { version = "0.35.0", path = "../rill-protocol" }
thiserror = "1.0.26"
tokio = "1.8.1"
