[package]
name = "rill-client"
version = "0.36.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rill-client/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "The client for the RilLRate Protocol."

[dependencies]
anyhow = "1.0.42"
async-trait = "0.1.51"
derive_more = "0.99.16"
log = "0.4.14"
meio = "0.93.2"
meio-connect = "0.93.2"
rill-protocol = { version = "0.36.0", path = "../rill-protocol" }
thiserror = "1.0.26"
tokio = "1.9.0"
