[package]
name = "rill-derive"
version = "0.38.0-rc.1"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rill-derive/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "Derive macro for the RillRate."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.28"
quote = "1.0.9"
syn = "1.0.75"
