[package]
name = "rill-engine"
version = "0.37.0-rc.4"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rill-engine/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "The RillRate Protocol async engine."

[dependencies]
anyhow = "1.0.42"
async-trait = "0.1.51"
derive_more = "0.99.16"
futures = "0.3.16"
log = "0.4.14"
meio = "0.93.3"
meio-connect = "0.93.3"
metacrate = "0.1.2"
once_cell = "1.8.0"
rill-protocol = { version = "0.37.0-rc.4", path = "../rill-protocol" }
serde = "1.0.127"
strum = { version = "0.21.0", features = ["derive"] }
thiserror = "1.0.26"
tokio = { version = "1.10.0", features = ["full"] }
tokio-stream = "0.1.7"

[dev-dependencies]
ctrlc = "3.2.0"
env_logger = "0.9.0"
