[package]
name = "rill-export"
version = "0.15.0"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
edition = "2018"
repository = "https://github.com/rate-technology/rill"
homepage = "https://github.com/rate-technology/rill"
documentation = "https://docs.rs/rill-export/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "Exporters for rill tracing system"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
derive_more = "0.99.11"
flate2 = "1.0.19"
log = "0.4.13"
meio = "0.72.0"
meio-connect = "0.72.0"
metacrate = "0.1.2"
mime_guess = "2.0.3"
reqwest = { version = "0.11.0", default-features = false, features = ["rustls-tls"] }
rill-protocol = { version = "0.15.0", path = "../rill-protocol" }
serde = "1.0.119"
serde-pickle = "0.6.2"
strum = "0.20.0"
strum_macros = "0.20.1"
tar = "0.4.30"
thiserror = "1.0.23"
tokio = { version = "1.0.1", features = ["full"] }
toml = "0.5.8"
typed-slab = "0.1.0"
