[package]
name = "rill-export"
version = "0.22.0"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rill-export/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "Exporter for rill-hub"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
derive_more = "0.99.11"
futures = "0.3.13"
log = "0.4.14"
meio = "0.83.0"
meio-connect = "0.83.0"
rill-client = { version = "0.22.0", path = "../rill-client" }
rill-protocol = { version = "0.22.0", path = "../rill-protocol" }
serde = "1.0.123"
serde-pickle = "0.6.2"
tokio = { version = "1.2.0", features = ["full"] }
