[package]
name = "rill-protocol"
version = "0.32.0"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rill-protocol/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "Dynamic logging and tracing system"

[dependencies]
anyhow = "1.0.41"
derive_more = "0.99.14"
flexbuffers = "2.0.0"
log = "0.4.14"
meio-protocol = "0.91.1"
metacrate = "0.1.2"
once_cell = "1.8.0"
ordered-float = { version = "2.5.1", features = ["serde"], default-features = false }
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.26"
vectorize = "0.1.0"
