[package]
name = "rill-protocol"
version = "0.37.0-dev"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rill-protocol/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "The RillRate protocol."

[dependencies]
anyhow = "1.0.42"
derive_more = "0.99.16"
flexbuffers = "2.0.0"
log = "0.4.14"
meio-protocol = "0.93.3"
metacrate = "0.1.2"
once_cell = "1.8.0"
ordered-float = { version = "2.7.0", features = ["serde"], default-features = false }
serde = { version = "1.0.127", features = ["derive"] }
thiserror = "1.0.26"
vectorize = "0.2.0"
