[package]
name = "rill-storage"
version = "0.19.2"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rill-storage/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "Storage format of the rillrate tracer"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
bson = "1.2.0"
log = "0.4.14"
rill-protocol = { version = "0.19.2", path = "../rill-protocol" }
serde = "1.0.123"
tokio = { version = "1.2.0", features = ["full"] }

[dev-dependencies]
env_logger = "0.8.3"
tempfile = "3.2.0"
