[package]
name = "rill-view"
version = "0.30.0-alpha.5"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rill-view/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "Dynamic logging and tracing system"

[dependencies]
derive_more = "0.99.14"
rill-engine = { version = "0.30.0-alpha.5", path = "../rill-engine", optional = true }
rill-protocol = { version = "0.30.0-alpha.5", path = "../rill-protocol" }
serde = "1.0.126"

[features]
default = ["rill-engine"]
