[package]
name = "rill"
version = "0.19.2"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rill/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "Dynamic logging and tracing system"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
derive_more = "0.99.11"
futures = "0.3.12"
log = "0.4.14"
meio = "0.81.0"
meio-connect = "0.81.0"
metacrate = "0.1.2"
once_cell = "1.5.2"
rill-protocol = { version = "0.19.2", path = "../rill-protocol" }
serde = "1.0.123"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["full"] }

[dev-dependencies]
ctrlc = "3.1.7"
env_logger = "0.8.3"
