[package]
name = "rillrate-protocol"
version = "0.36.0"
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rillrate-protocol/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "Top level protocol for the RillRate protocol."

[dependencies]
derive_more = "0.99.16"
log = "0.4.14"
once_cell = "1.8.0"
rill-engine = { version = "0.36.0", path = "../rill-engine", optional = true }
rill-protocol = { version = "0.36.0", path = "../rill-protocol" }
serde = "1.0.127"
vectorize = "0.2.0"

[features]
default = ["engine"]
engine = ["rill-engine"]
