[package]
name = "rillrate"
version = "0.37.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rillrate/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "Real-time UI for bots"

[dependencies]
anyhow = "1.0.42"
async-trait = "0.1.51"
derive_more = "0.99.16"
log = "0.4.14"
meio = "0.93.3"
meio-connect = "0.93.3"
metacrate = "0.1.2"
once_cell = "1.8.0"
rate-core = { version = "0.37.0", path = "../rate-core" }
rill-protocol = { version = "0.37.0", path = "../rill-protocol" }
rrpack-prime = { version = "0.37.0", path = "../rrpack-prime" }
serde = "1.0.127"
strum = "0.21.0"
thiserror = "1.0.26"
tokio = "1.10.0"
