[package]
name = "rillrate"
version = "0.40.0-rc.2"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rillrate/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "Real-time UI for bots"

[dependencies]
anyhow = "1.0.43"
async-trait = "0.1.51"
derive_more = "0.99.16"
log = "0.4.14"
meio = "0.94.0"
meio-connect = "0.94.0"
metacrate = "0.1.2"
notify = "5.0.0-pre.12"
once_cell = "1.8.0"
rate-config = { version = "0.40.0-rc.2", path = "../pkg-core/rate-config" }
rate-core = { version = "0.40.0-rc.2", path = "../pkg-core/rate-core" }
rill-protocol = { version = "0.40.0-rc.2", path = "../pkg-core/rill-protocol" }
rrpack-prime = { version = "0.40.0-rc.2", path = "../pkg-packs/prime" }
serde = "1.0.130"
strum = "0.21.0"
thiserror = "1.0.29"
tokio = "1.11.0"
