[package]
name = "rrpack-trade"
version = "0.39.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rrpack-trade/"
license = "BUSL-1.1"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "RillRate Pack: Trade"

[dependencies]
derive_more = "0.99.16"
log = "0.4.14"
once_cell = "1.8.0"
ordered-float = "2.8.0"
rill-derive = { version = "0.39.0", path = "../../rill-derive" }
rill-engine = { version = "0.39.0", path = "../../rill-engine", optional = true }
rill-protocol = { version = "0.39.0", path = "../../rill-protocol" }
serde = "1.0.130"
vectorize = "0.2.0"

[features]
default = ["engine"]
engine = ["rill-engine"]
