[package]
name = "rate-config"
version = "0.40.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rate-config/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "Utils for configuration files."

[dependencies]
rate-core = { version = "0.40.0", path = "../rate-core" }
rill-config = { version = "0.40.0", path = "../rill-config" }
rrpack-basis = { version = "0.40.0", path = "../../pkg-packs/basis" }
serde = "1.0.130"
