[package]
name = "rate-config"
version = "0.41.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rate-config/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "Utils for configuration files."

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
log = "0.4.14"
meio = "0.96.0"
notify = { git = "https://github.com/notify-rs/notify" } #"5.0.0-pre.13"
once_cell = "1.8.0"
ordered-float = "2.8.0"
rate-core = { version = "0.41.0", path = "../rate-core" }
rill-config = { version = "0.41.0", path = "../rill-config" }
rill-protocol = { version = "0.41.0", path = "../rill-protocol" }
rrpack-basis = { version = "0.41.0", path = "../../pkg-packs/basis" }
serde = "1.0.130"
serde-xml-rs = "0.5.1"
strum = "0.21.0"
tokio = "1.12.0"
