[package]
name = "rill-client"
version = "0.41.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rill-client/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "The client for the RilLRate Protocol."

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
derive_more = "0.99.16"
log = "0.4.14"
meio = "0.96.0"
meio-connect = "0.96.0"
rill-protocol = { version = "0.41.0", path = "../rill-protocol" }
thiserror = "1.0.29"
tokio = "1.12.0"
