[package]
name = "rill-protocol"
version = "0.41.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rill-protocol/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "The RillRate protocol."

[dependencies]
anyhow = "1.0.44"
derive_more = "0.99.16"
flexbuffers = "2.0.0"
log = "0.4.14"
meio-protocol = "0.95.2"
metacrate = "0.1.2"
once_cell = "1.8.0"
ordered-float = { version = "2.8.0", features = ["serde"], default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.29"
vectorize = "0.2.0"
