[package]
name = "rate-app"
version = "0.40.0-rc.1"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rate-app/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "RillRate App"

[dependencies]
anyhow = "1.0.43"
approx = "0.5.0"
derive_more = "0.99.16"
js-sys = "0.3.53"
lazy_static = "1.4.0"
log = "0.4.14"
metacrate = "0.1.2"
once_cell = "1.8.0"
ordered-float = { version = "2.8.0", default-features = false }
plotters = "0.3.1"
plotters-backend = "0.3.2"
plotters-canvas = "0.3.0"
pulldown-cmark = "0.8.0"
rate-ui = { version = "0.40.0-rc.1", path = "../rate-ui" }
rill-protocol = { version = "0.40.0-rc.1", path = "../../pkg-core/rill-protocol" }
rrpack-prime = { version = "0.40.0-rc.1", path = "../../pkg-packs/prime", default-features = false }
serde = "1.0.130"
strum = "0.21.0"
timeago = "0.3.0"
wasm-bindgen = "=0.2.76"
wasm-logger = "0.2.0"
yew = "0.18.0"
yew-components = "0.3.0"

[dependencies.web-sys]
version = "0.3.53"
features = [
    "Attr",
    "Element",
    "NamedNodeMap",
]
