[package]
name = "rate-ui"
version = "0.40.0-rc.2"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rate-ui/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "RillRate UI: extension for Yew"

[dependencies]
anyhow = "1.0.43"
approx = "0.5.0"
chrono = { version = "0.4.19", features = ["wasmbind"] }
derive_more = "0.99.16"
itertools = "0.10.1"
js-sys = "0.3.53"
log = "0.4.14"
metacrate = "0.1.2"
once_cell = "1.8.0"
rill-protocol = { version = "0.40.0-rc.2", path = "../../pkg-core/rill-protocol" }
serde = "1.0.130"
strum = { version = "0.21.0", features = ["derive"] }
thiserror = "1.0.28"
typed-slab = "0.1.4"
url = "2.2.2"
wasm-bindgen = "=0.2.76"
yew = "0.18.0"
yew-components = "0.3.0"

[dependencies.web-sys]
version = "0.3.53"
features = [
  #'Element',
  'DomRect',

  'HtmlElement',
  'CssStyleDeclaration',

  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'CanvasGradient',
  'TextMetrics',
#
#  'WebGlBuffer',
#  'WebGlProgram',
#  'WebGlRenderingContext',
#  'WebGlShader',
#  'WebGlUniformLocation',
]
