[package]
name = "rrpack-prime"
version = "0.40.0-rc.2"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rillrate/rillrate"
homepage = "https://github.com/rillrate/rillrate"
documentation = "https://docs.rs/rrpack-prime/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "RillRate Pack: Prime"

[dependencies]
chrono = { version = "0.4.19", optional = true }
derive_more = "0.99.16"
log = "0.4.14"
once_cell = "1.8.0"
ordered-float = "2.8.0"
rill-derive = { version = "0.40.0-rc.2", path = "../../pkg-core/rill-derive" }
rill-engine = { version = "0.40.0-rc.2", path = "../../pkg-core/rill-engine", optional = true }
rill-protocol = { version = "0.40.0-rc.2", path = "../../pkg-core/rill-protocol" }
serde = "1.0.130"
vectorize = "0.2.0"

[features]
default = ["engine"]
engine = ["chrono", "rill-engine"]
